# three-dsl

./: .gitignore  Makefile  README.md  cabal.project  three-hs-dsl.cabal
src/: API.hs  DSL.hs  Main.hs
src/THREE/: Camera.hs  Color.hs  Internal.hs  Light.hs  Mesh.hs  MeshLambertMaterial.hs  Object3D.hs  PerspectiveCamera.hs  PointLight.hs  Scene.hs
