cabal-version:          3.0
name:                   three-hs-dsl
version:                0.2

executable app
  hs-source-dirs:       src
  main-is:              Main.hs
  build-depends:        base, jsaddle, lens, miso
  default-language:     GHC2021
  ghc-options:          -Wall -Wno-type-defaults -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start" -ddump-splices
  cpp-options:          -DWASM
  default-extensions:   CPP
  other-modules:        API
                        THREE.AnimationClip
                        THREE.BoxGeometry
                        THREE.BufferGeometry
                        THREE.Camera
                        THREE.Color
                        THREE.Euler
                        THREE.EventDispatcher
                        THREE.Internal
                        THREE.Layers
                        THREE.Light
                        THREE.Loader
                        THREE.Material
                        THREE.Matrix3
                        THREE.Matrix4
                        THREE.Mesh
                        THREE.MeshLambertMaterial
                        THREE.Object3D
                        THREE.PerspectiveCamera
                        THREE.PointLight
                        THREE.Quaternion
                        THREE.Raycaster
                        THREE.Scene
                        THREE.SphereGeometry
                        THREE.Texture
                        THREE.TextureLoader
                        THREE.Vector3
                        THREE.WebGLRenderer

